; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_list.c_cipher_cmp.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_list.c_cipher_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32**)* @cipher_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cipher_cmp(i32** %0, i32** %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32** %1, i32*** %4, align 8
  %6 = load i32**, i32*** %3, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @EVP_CIPHER_number(i32* %7)
  %9 = load i32**, i32*** %4, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @EVP_CIPHER_number(i32* %10)
  %12 = sub nsw i32 %8, %11
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %2
  %16 = load i32**, i32*** %3, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @EVP_CIPHER_provider(i32* %17)
  %19 = call i32 @OSSL_PROVIDER_name(i32 %18)
  %20 = load i32**, i32*** %4, align 8
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @EVP_CIPHER_provider(i32* %21)
  %23 = call i32 @OSSL_PROVIDER_name(i32 %22)
  %24 = call i32 @strcmp(i32 %19, i32 %23)
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %15, %2
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @EVP_CIPHER_number(i32*) #1

declare dso_local i32 @strcmp(i32, i32) #1

declare dso_local i32 @OSSL_PROVIDER_name(i32) #1

declare dso_local i32 @EVP_CIPHER_provider(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
